traefik/dashboard/05-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-tls
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`DOMAIN`)
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: test-header
        - name: test-ratelimit
  tls:
    certResolver: myresolver

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-header
  namespace: app
spec:
  headers:
    customRequestHeaders:
      X-Script-Name: "test"
    customResponseHeaders:
      X-Custom-Response-Header: "value"

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-ratelimit
  namespace: app
spec:
  rateLimit:
    average: 100
    burst: 50
